Fix iOS Safari overflow issue on ListingImageGallery thumbnail strip

--- a/src/containers/ListingPage/ListingImageGallery/ListingImageGallery.module.css
+++ b/src/containers/ListingPage/ListingImageGallery/ListingImageGallery.module.css
@@ -1,20 +1,24 @@
 @import '../../../styles/customMediaQueries.css';
 
 :global(.image-gallery-thumbnails-container) {
+  text-align: left !important;
+}
+:global(.image-gallery-thumbnails) {
+  padding-top: 24px;
+  padding-bottom: 0;
+
   /*
    By default, the gallery controls the scroll position of the thumbnails when
    browsing the images. We change this logic to a freely scrollable container
    that the user controls. This overflow works together with the
    `disableThumbnailScroll` option in the component JS.
    */
-  overflow: auto;
-  text-align: left !important;
-}
-:global(.image-gallery-thumbnails) {
-  padding-top: 24px;
-  padding-bottom: 0;
   width: 100vw;
+  overflow: auto;
 
+  @media (--viewportMedium) {
+    width: calc(100vw - 48px);
+  }
   @media (--viewportLarge) {
     width: unset;
   }
